# UIWhisperCPP

./: .gitignore  README.md  build.sh  main.py  output.txt  pyproject.toml
src/uiwhispercpp/: gui.py  main.py  transcribe.py  transcript.py
src/uiwhispercpp/gui/: gui.py  logger_widget.py  settings_selectors_widget.py  transcription_progress.py  upload_file_button.py
src/uiwhispercpp/models/: __init__.py  audio.py  base.py  manager.py  parakeet.py  whisper.py
test/: pyproject.toml
