[project]
name = "uiwhispercpp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "imageio-ffmpeg>=0.6.0",
  "pyside6>=6.10.2",
  "pywhispercpp>=1.4.1",
]

[project.scripts]
app = "uiwhispercpp.main:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
