[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Oles Odynets", email = "olchyk98@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
test = "test:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
